--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,8 @@ a
  {
   display: flex;
   box-sizing: border-box;
-  background: url(../img/fon.png) no-repeat;
+  background: url(../img/fon.png) no-repeat center center;
+  background-size: cover;
   border-radius: 5px 5px 0 0;
   padding: 22px 20px 0 62px;
   color: #fff;
@@ -295,6 +296,7 @@ a
   font-family: 'Roboto', sans-serif;
   padding: 101px 29px 0 0;
   text-align: right;
+  margin-bottom: 37px;
  }
  .video_conteiner_text h3
  {
@@ -313,6 +315,19 @@ a
  {
   font-size: 12px;
   padding-left: 116px;
+ }
+ .video{
+  width: 100%;
+  position: relative;
+  padding-bottom: 33%;
+  margin-bottom: 37px;
+ }
+ iframe{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
  }
 
  /*/VIDEO-BOX*/
@@ -454,6 +469,11 @@ a
 {
   background: #0073C5;
   padding: 0 30px  0 38px;
+}
+.reviews_title,
+.partners_title
+{
+  margin-right: -1px;
 }
 .reviews_title h3
 {
